--- a/templates/login.html
+++ b/templates/login.html
@@ -173,7 +173,7 @@
         </a>
     </div>
     <video autoplay muted loop id="video-background">
-        <source src="https://assets.codepen.io/3364143/7btrrd.mp4" type="video/mp4">
+        <source src="{{ url_for('static', filename='video/background.mp4') }}" type="video/mp4">
     </video>
     <div class="overlay"></div>
             
